--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/svelte": "^5.6.0",
     "@libsql/client": "^0.7.0",
     "@lucia-auth/adapter-drizzle": "^1.0.7",
+    "arctic": "^1.9.1",
     "astro": "^4.11.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.2",
